--- a/src/styles.css
+++ b/src/styles.css
@@ -96,6 +96,78 @@ body {
   .skills:hover {  
     transform: translateY(-5px);  
   } 
+
+  .skillscard1 {  
+    background-color: #e1e1e1;  
+    color: black;
+    padding: 20px;  
+    width: 50%;
+    margin: 10px;  
+    flex: 1 1 calc(45% - 20px);  
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  
+    border-radius: 5px;  
+    transition: transform 0.3s ease, box-shadow 0.3s ease;  
+  }  
+
+  .skillscard1:hover {
+    background-image: url(html.png);
+    background-repeat: no-repeat;
+    background-size: 30%;
+  }
+
+  .skillscard2 {  
+    background-color: #e1e1e1;  
+    color: black;
+    padding: 20px;  
+    width: 60%;
+    margin: 10px;  
+    flex: 1 1 calc(45% - 20px);  
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  
+    border-radius: 5px;  
+    transition: transform 0.3s ease, box-shadow 0.3s ease;  
+  }  
+
+  .skillscard2:hover {
+    background-image: url(css.png);
+    background-repeat: no-repeat;
+    background-size: 30%;
+  }
+  .skillscard3 {  
+    background-color: #e1e1e1;  
+    color: black;
+    padding: 20px;  
+    width: 40%;
+    margin: 10px;  
+    flex: 1 1 calc(45% - 20px);  
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  
+    border-radius: 5px;  
+    transition: transform 0.3s ease, box-shadow 0.3s ease;  
+  }  
+
+  .skillscard3:hover {
+    background-image: url(javascript.png);
+    background-repeat: no-repeat;
+    background-size: 34%;
+  }
+
+  .skillscard4 {  
+    background-color: #e1e1e1;  
+    color: black;
+    padding: 20px;  
+    width: 70%;
+    margin: 10px;  
+    flex: 1 1 calc(45% - 20px);  
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  
+    border-radius: 5px;  
+    transition: transform 0.3s ease, box-shadow 0.3s ease;  
+  }  
+
+  .skillscard4:hover {
+    background-image: url(figma.png);
+    background-repeat: no-repeat;
+    background-size: 30%;
+  }
+
   
   /* Projects Styles */ 
   
