--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
 /* General Styles */  
 body {  
     margin: 0;  
-    font-family: 'Arial', sans-serif;  
     background-color: #b4a396;  
   }  
   
@@ -16,17 +15,16 @@ body {
   .header {  
     width: 100%;
     text-align: center;  
-    padding: 50px 0;  
+    padding: 50px 0;     /* space inside an element */ 
     background-image: url("headerbg.jpeg");
     background-size: 100%;
-    background-color: #333; 
     color: white;
     font-size: large; 
-    font-family:sans-serif
+    font-family:sans-serif;
   }
 
   .header h1 {  
-    margin: 0;  
+    margin: 0;        /* space outside an element */ 
     font-family: brush script mt, cursive;
     font-size: xxx-large;
     color: whitesmoke;
@@ -38,14 +36,14 @@ body {
   }  
   
   .header nav ul li {  
-    display: inline;  
-    margin: 0 15px;  
+    display: inline;      /* do not start on a new line they flow within the same line */ 
+    margin: 0 15px;       /* 0(top bottom) 15px(side by side) */
   }  
   
   .header nav ul li a {  
     color: white;  
-    text-decoration: none;  
-    transition: color 0.3s ease;  
+    text-decoration: none;  /* no underline */
+    transition: color 1s ease;  /* color transition */
   }  
   
   .header nav ul li a:hover {  
@@ -60,16 +58,19 @@ body {
     font-size: 29px;
     color: white;
   } 
+
+  .aboutme p {
+    font-family: sans-serif;
+  }
   .aboutme {  
-    padding: 50px 20px;  
-    background-color: white; 
+    padding: 30px 80px; 
     background-image: url("aboutme.jpeg");
     background-size: 100%; 
     margin: 20px 0;  
-    border-radius: 8px;  
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  
+    border-radius: 8px;  /* curves edges */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  /* 0(position centered horizontally) 2px(indicates how far down the shadow is placed) 10px(shadow blur) 000(color black) 0.1(opacity) */
     transition: all 0.3s ease;  
-    color: rgb(238, 243, 247);
+    color: white;
     font-weight:600;
   }  
   
@@ -103,10 +104,9 @@ body {
     padding: 20px;  
     width: 50%;
     margin: 10px;  
-    flex: 1 1 calc(45% - 20px);  
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  
-    border-radius: 5px;  
-    transition: transform 0.3s ease, box-shadow 0.3s ease;  
+    flex: 1 1 calc(45% - 20px);  /* 1(flex grow) 1(flex shrink) calc(flex basis, initial basis) for responsive designs) */
+    box-shadow: 0 2px 5px rgba(0, 0, 0,);  
+    border-radius: 5px; 
   }  
 
   .skillscard1:hover {
@@ -124,7 +124,6 @@ body {
     flex: 1 1 calc(45% - 20px);  
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  
     border-radius: 5px;  
-    transition: transform 0.3s ease, box-shadow 0.3s ease;  
   }  
 
   .skillscard2:hover {
@@ -140,8 +139,7 @@ body {
     margin: 10px;  
     flex: 1 1 calc(45% - 20px);  
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  
-    border-radius: 5px;  
-    transition: transform 0.3s ease, box-shadow 0.3s ease;  
+    border-radius: 5px; 
   }  
 
   .skillscard3:hover {
@@ -158,8 +156,7 @@ body {
     margin: 10px;  
     flex: 1 1 calc(45% - 20px);  
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  
-    border-radius: 5px;  
-    transition: transform 0.3s ease, box-shadow 0.3s ease;  
+    border-radius: 5px;
   }  
 
   .skillscard4:hover {
@@ -182,7 +179,6 @@ body {
     background-image: url("projectbg.jpg");
     background-size: 100%;
     padding: 50px 20px;  
-    background-color: white;  
     margin: 20px 0;  
     border-radius: 8px;  
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  
@@ -213,7 +209,7 @@ body {
 
   .project a{
     text-decoration: none;
-    color: rgb(45, 42, 38);
+    color: rgb(16, 15, 15);
     font-weight: 300; 
     font-family: sans-serif;
     font-size: x-large
@@ -230,8 +226,7 @@ body {
     background-image: url("footerbg.gif");
     background-size: 100%;
     padding: 50px 20px;  
-    color: white;
-    background-color: white;  
+    color: white;  
     margin: 20px 0;  
     border-radius: 8px;  
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  
@@ -240,7 +235,7 @@ body {
 
   .contact a{
     text-decoration: none;
-    color: white;
+    color: white; 
   }
   
   .contact:hover {  
@@ -258,7 +253,7 @@ body {
   }
 
   .contact a:hover {
-    color: rgb(104, 95, 82)
+    color: rgb(124, 204, 239)
 
   }
   
@@ -276,3 +271,6 @@ body {
       flex: 1 1 100%;  
     }  
   }
+
+
+  
